5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1644_2703.log
== TEST (2019-04-09 16:48:40) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem:"eleitor"
else( idade >= 18 ):
	mensagem:"nao_eleitor"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:07) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem:("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:08) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem:("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:08) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem:("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:08) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem:("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:11) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:14) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem("eleitor")
else( idade >= 18 ):
	mensagem:("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:29) 
-- CODE:
idade = (float(input("idade: ")))
if ( idade < 18 ):
   mensagem("eleitor")
else( idade => 18 ):
	mensagem("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else( idade => 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:59) 
-- CODE:
idade = (float(input("idade: ")))
if (idade < 18 ):
   mensagem("eleitor")
else(idade >= 18 ):
	mensagem("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else(idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:49:59) 
-- CODE:
idade = (float(input("idade: ")))
if (idade < 18 ):
   mensagem("eleitor")
else(idade >= 18 ):
	mensagem("nao_eleitor")
print(mensagem)
-- EXECUTION TIME:
0.132532
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    else(idade >= 18 ):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:01) 
-- CODE:
idade = (float(input("idade: ")))
if (idade < 18 ):
   mensagem("eleitor")
else(idade >= 18 ):
	mensagem("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else(idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:01) 
-- CODE:
idade = (float(input("idade: ")))
if (idade < 18 ):
   mensagem("eleitor")
else(idade >= 18 ):
	mensagem("nao_eleitor")
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else(idade >= 18 ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:47) 
-- CODE:
idade = (float(input("idade: ")))
if (idade >= 18 ):
   mensagem("eleitor")
else:
	mensagem("nao_eleitor")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem("nao_eleitor")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:21) 
-- CODE:
idade = (float(input("idade: ")))
if (idade >= 18 ):
   mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:27) 
-- CODE:
idade = (float(input("idade: ")))
if (idade >= 18 ):
   mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.142308
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
